Documents/EKS/istio-gateway-scoreci.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.internal.scoreci-dev.br.experian.eeca'
    port:
      name: http
      number: 80
      protocol: HTTP
