Documents/EKS/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - "grafana.internal.openbanking-dev.br.experian.eeca"
  gateways:
    - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
