Documents/EKS/kiali-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "kiali.internal.openbanking-dev.br.experian.eeca"
  gateways:
    - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
