Documents/EKS/kubecost-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubecost-cost-vs
  namespace: kubecost
spec:
  hosts:
    - "kubecost.internal.openbanking-prod.br.experian.eeca"
  gateways:
    - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: kubecost-cost-analyzer
        port:
          number: 9090
