Documents/EKS/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: test
spec: 
  gateways: 
  - istio-system/istio-gateway
  hosts:
  - "nginx-test.internal.openbanking-dev.br.experian.eeca"
  http:
  - route:
    - destination:
        host: nginx
        port:
          number: 80
